prevent x scroll on mobile

--- a/dheeranet/static/css/main.css
+++ b/dheeranet/static/css/main.css
@@ -44,6 +44,7 @@ html {
 }
 
 body {
+  overflow-x:hidden;
   margin:0;
   font-family: mainfont, Droid Sans, JhengHei, SimHei, Trebuchet MS, Verdana, Arial, Helvetica, sans-serif;
   font-size:18px;
